assets/css/main.scss
---
---

@import url(bw.css);
@import url('https://rsms.me/inter/inter.css');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap');
@import 'reset';
@import 'config';

.footer {
    p {
        font-size: 12px;
        color: #514e4e;
    }

    a:visited {
        text-decoration: none;
        color: #514e4e;
    }


    background: #f7f7f7;
    border-left: 1px solid #dddcdc;
    border-right: 1px solid #dddcdc;
    border-top: 1px solid #dddcdc;
    font-family: 'inter';
    font-weight: 300;
    margin-bottom: -20em;
    margin-left: 45px;
    margin-right: 45px;
    padding-bottom: 40px;
    padding-left: 30px;
    padding-top: 15px;

    @media only screen and (max-width: $breakpoint-md) {
        margin-right: 0;
        margin-left: 0;
    }

    @media (max-width: 500px) {
        margin-right: 0;
        margin-left: 0;
    }
}

.page {
    margin-left: 45px;
    margin-right: 45px;

    @media (max-width: $breakpoint-sm) {
        margin-left: 0;
        margin-right: 0;
    }

    .header {
        display: inline-flex;
        width: 100%;
        border-bottom: 1px solid #dddcdc;
        margin-bottom: 15px;
        padding-bottom: 20px;
        font-size: 12pt;
        background: #f0f0f0;
        padding-top: 20px;

        @media only screen and (max-width: $breakpoint-md) {
            display: block;
            padding-bottom: 10px;
        }

        @media (max-width: 500px) {
            display: block;
            padding-bottom: 5px;
        }
    }

    display: block;
    border-left: 1px solid #dddcdc;
    border-right: 1px solid #dddcdc;
    // padding-left: 30px;
    // padding-right: 30px;
    // margin-top: -6em;
    // margin-bottom: -10em;
    // padding-bottom: 100px;
    background: #f7f7f7;

    .title {
        // margin-top: 40px;
        // margin-left: 45px;
        font-weight: 400;
        font-family: 'inter';
        color: #4a4a4a;
        // border-left: 1px solid #dddcdc;
        // padding-top: 30px;
        text-align: left;
        padding-left: 30px;

        a:visited {
            color: #4a4a4a;
            text-decoration: none;
        }
    }


    .nav {
        @media only screen and (max-width: $breakpoint-md) {
            padding-left: 30px;
            padding-right: 0;
        }

        @media (max-width: 500px) {
            padding-left: 30px;
        }

        padding-right: 20px;
        a {
            font-family: 'inter';
            // line-height: 8px;
            font-weight: 400;
            color: gray;

            &:hover {
                text-decoration: none;
                background-color: #fcf7a2;
                border-bottom: 0px;
            }
        }

        ul {
            list-style: none;
            align-content: left;
            justify-content: left;
            display: flex;
            // max-width: 90px;

            li {
                // text-align: right;
                padding-right: 12px;
                // line-height: 17px;
                // list-style: none;
                // width: 90px;

                @media (max-width: 500px) {
                    padding-right: 0;
                }

                @media only screen and (max-width: $breakpoint-md) {
                    padding-right: 0;
                }
            }
        }
    }

    .cont {
        // margin-left: 180px;
        // flex: 1;
        justify-content: center;
        align-items: center;
        // display: flex;
        padding-left: 30px;
        padding-right: 30px;
    }
}

@media (max-width: 500px) {
    .page {
        flex-direction: column;
        align-items: center;
        .nav {
            width: 65%;
            ul {
                display: flex;
                justify-content: space-between;
            }
        }
    }
    .page .cont {
        margin-left: 120px;
        justify-content: center;
        align-items: center;
        display: flex;
        flex-wrap: wrap;

        @media (max-width: $breakpoint-sm) {
            max-width: 90vw;
            display: block;
        }
    }

    .page {
        display: inline-block;

        @media (max-width: $breakpoint-sm) {
            max-width: 100vw;
            display: block;
        }

        @media only screen and (max-width: $breakpoint-md) {
            max-width: 100vw;
            display: block;
        }

        .cont {
            margin-left: 0px;
        }
        .nav {
            margin-left: 0px;
            position: relative;
            ul li {
                padding-bottom: 10px;
                padding-right: 10px;

                @media only screen and (max-width: $breakpoint-md) {
                    padding-right: 0;
                }

                @media (max-width: 500px) {
                    padding-right: 0;
                }
            }

        }
    }
}

.site-title {
    font-family: 'inter', sans-serif;
    text-align: left;
    align-self: center;
    font-size: 44px;
    font-weight: 700;
    margin-bottom: 10px;
    line-height: 45px;
    max-width: auto;
}

body {
    color: #000000;
    background: #eaeaea;
    font-family: 'inter', sans-serif;
    font-size: 12pt;
    line-height: 1.5;
    font-weight: 400;
    word-wrap: break-word;
}

hr {
    color: #ffffff;
}

p {
    font-size: 12pt;
    line-height: 1.25em;
}
/* ... */

